--- a/static/styles.css
+++ b/static/styles.css
@@ -10,7 +10,7 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 0 0 7.8%;
     --foreground: 222.2 47.4% 11.2%;
 
     --muted: 210 40% 96.1%;
