--- a/static/styles.css
+++ b/static/styles.css
@@ -3,10 +3,26 @@
 @tailwind utilities;
 
 @layer {
-    h1, h2, h3, h4, h5, h6, span, p, a, li, td, th, label, input, textarea, button, select {
-        @apply text-text;
-    }
-}   
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  span,
+  p,
+  a,
+  li,
+  td,
+  th,
+  label,
+  input,
+  textarea,
+  button,
+  select {
+    @apply text-text;
+  }
+}
 
 @layer base {
   :root {
@@ -82,7 +98,51 @@
   }
   body {
     @apply bg-background text-foreground;
-    font-feature-settings: "rlig" 1, "calt" 1;
+    font-feature-settings:
+      "rlig" 1,
+      "calt" 1;
+  }
+
+  @font-face {
+    font-family: "Messina Sans";
+    font-style: normal;
+    font-weight: 400;
+    src: url("/fonts/MessinaSans-Regular.woff2") format("woff2");
+  }
+
+  @font-face {
+    font-family: "Messina Sans";
+    font-style: normal;
+    font-weight: 500;
+    src: url("/fonts/MessinaSans-Light.woff2") format("woff2");
+  }
+
+  @font-face {
+    font-family: "Messina Sans";
+    font-style: normal;
+    font-weight: 600;
+    src: url("/fonts/MessinaSans-Bold.woff2") format("woff2");
+  }
+
+  @font-face {
+    font-family: "Messina Sans";
+    font-style: italic;
+    font-weight: 400;
+    src: url("/fonts/MessinaSans-Italic.woff2") format("woff2");
+  }
+
+  @font-face {
+    font-family: "Messina Sans";
+    font-style: italic;
+    font-weight: 600;
+    src: url("/fonts/MessinaSans-BoldItalic.woff2") format("woff2");
+  }
+
+  @font-face {
+    font-family: "Messina Sans";
+    font-style: normal;
+    font-weight: 700;
+    src: url("/fonts/MessinaSans-Black.woff2") format("woff2");
   }
 }
 
@@ -117,55 +177,57 @@
 
 @keyframes z-flip {
   0% {
-      transform: rotateY(0);
-      background: linear-gradient(45deg, #ff0000, #00ff00, #0000ff); /* Red to green to blue */
+    transform: rotateY(0);
+    background: linear-gradient(45deg, #ff0000, #00ff00, #0000ff); /* Red to green to blue */
   }
   10% {
-      transform: rotateY(180deg);
-      background: linear-gradient(45deg, #ff00ff, #ffff00, #00ffff); /* Magenta to yellow to cyan */
+    transform: rotateY(180deg);
+    background: linear-gradient(45deg, #ff00ff, #ffff00, #00ffff); /* Magenta to yellow to cyan */
   }
   20% {
-      transform: rotateY(0);
-      background: linear-gradient(45deg, #00ff00, #0000ff, #ff0000); /* Green to blue to red */
+    transform: rotateY(0);
+    background: linear-gradient(45deg, #00ff00, #0000ff, #ff0000); /* Green to blue to red */
   }
   30% {
-      transform: rotateY(180deg);
-      background: linear-gradient(45deg, #ffff00, #00ffff, #ff00ff); /* Yellow to cyan to magenta */
+    transform: rotateY(180deg);
+    background: linear-gradient(45deg, #ffff00, #00ffff, #ff00ff); /* Yellow to cyan to magenta */
   }
   40% {
-      transform: rotateY(0);
-      background: linear-gradient(45deg, #0000ff, #ff0000, #00ff00); /* Blue to red to green */
+    transform: rotateY(0);
+    background: linear-gradient(45deg, #0000ff, #ff0000, #00ff00); /* Blue to red to green */
   }
   50% {
-      transform: rotateY(180deg);
-      background: linear-gradient(45deg, #00ffff, #ff00ff, #ffff00); /* Cyan to magenta to yellow */
+    transform: rotateY(180deg);
+    background: linear-gradient(45deg, #00ffff, #ff00ff, #ffff00); /* Cyan to magenta to yellow */
   }
   60% {
-      transform: rotateY(0);
-      background: linear-gradient(45deg, #ff0000, #00ff00, #0000ff); /* Red to green to blue */
+    transform: rotateY(0);
+    background: linear-gradient(45deg, #ff0000, #00ff00, #0000ff); /* Red to green to blue */
   }
   70% {
-      transform: rotateY(180deg);
-      background: linear-gradient(45deg, #ff00ff, #ffff00, #00ffff); /* Magenta to yellow to cyan */
+    transform: rotateY(180deg);
+    background: linear-gradient(45deg, #ff00ff, #ffff00, #00ffff); /* Magenta to yellow to cyan */
   }
   80% {
-      transform: rotateY(0);
-      background: linear-gradient(45deg, #00ff00, #0000ff, #ff0000); /* Green to blue to red */
+    transform: rotateY(0);
+    background: linear-gradient(45deg, #00ff00, #0000ff, #ff0000); /* Green to blue to red */
   }
   90% {
-      transform: rotateY(180deg);
-      background: linear-gradient(45deg, #ffff00, #00ffff, #ff00ff); /* Yellow to cyan to magenta */
+    transform: rotateY(180deg);
+    background: linear-gradient(45deg, #ffff00, #00ffff, #ff00ff); /* Yellow to cyan to magenta */
   }
   100% {
-      transform: rotateY(0);
-      background: linear-gradient(45deg, #0000ff, #ff0000, #00ff00); /* Blue to red to green */
+    transform: rotateY(0);
+    background: linear-gradient(45deg, #0000ff, #ff0000, #00ff00); /* Blue to red to green */
   }
 }
 
 /** Custom styles for the settings pages */
-.settings-table th, .settings-table td {
+.settings-table th,
+.settings-table td {
   padding: 0.5rem;
 }
-.settings-table th:first-child, .settings-table td:first-child {
+.settings-table th:first-child,
+.settings-table td:first-child {
   padding-right: 3rem;
 }
